[package]
name = "kernel-model-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.96"
rand = "0.8.5"
derive = { path = "derive", optional = true }

[features]
default = ["derive"]
derive = ["dep:derive"]

[workspace]
members = ["derive"]