[package]
name = "km-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
km-derive = { path = "derive", optional = true }
libafl_qemu = { version = "0.14.0", optional = true }

[patch.crates-io]
libafl_qemu = { git = "https://github.com/AFLplusplus/LibAFL", tag = "0.14.0" }

[features]
derive = ["dep:km-derive"]
qemu = ["dep:libafl_qemu"]

[workspace]
members = ["derive"]